--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.2.4",
+  "version": "0.2.5",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@size-limit/preset-small-lib": "^8.0.1",
     "@types/google-protobuf": "^3.15.6",
+    "@types/pako": "^2.0.0",
     "husky": "^8.0.1",
     "size-limit": "^8.0.1",
     "ts-node": "^10.9.1",
@@ -56,11 +57,13 @@
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "@cosmjs/amino": "0.28.4",
+    "@cosmjs/crypto": "^0.29.2",
     "@cosmjs/proto-signing": "0.28.4",
+    "@cosmjs/stargate": "^0.29.2",
     "@improbable-eng/grpc-web": "^0.15.0",
     "@improbable-eng/grpc-web-node-http-transport": "^0.15.0",
     "@metamask/eth-sig-util": "^4.0.1",
-    "@routerprotocol/chain-api": "^1.1.1",
+    "@routerprotocol/chain-api": "^1.1.3",
     "@types/lodash.values": "^4.3.6",
     "axios": "^0.21.1",
     "bech32": "^2.0.0",
@@ -72,20 +75,23 @@
     "ethereumjs-util": "^7.1.4",
     "ethers": "^5.6.4",
     "ethjs-util": "^0.1.6",
+    "fs": "^0.0.1-security",
     "google-protobuf": "^3.20.1",
     "graphql": "^16.3.0",
+    "graphql-tag": "^2.12.6",
+    "http-status-codes": "^2.2.0",
     "jscrypto": "1.0.3",
     "jsonschema": "^1.4.0",
     "keccak256": "^1.0.6",
     "link-module-alias": "^1.2.0",
     "lodash": "^4.17.21",
     "lodash.values": "^4.3.0",
+    "pako": "^2.0.4",
     "secp256k1": "^4.0.3",
     "sha3": "^2.1.4",
     "shx": "^0.3.2",
     "snakecase-keys": "^5.1.2",
     "store2": "^2.12.0",
-    "util": "^0.12.4",
-    "graphql-tag": "^2.12.6"
+    "util": "^0.12.4"
   }
 }
