--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@size-limit/preset-small-lib": "^8.0.1",
     "@types/google-protobuf": "^3.15.6",
     "@types/pako": "^2.0.0",
+    "@types/text-encoding": "^0.0.36",
     "husky": "^8.0.1",
     "size-limit": "^8.0.1",
     "ts-node": "^10.9.1",
@@ -92,6 +93,7 @@
     "shx": "^0.3.2",
     "snakecase-keys": "^5.1.2",
     "store2": "^2.12.0",
+    "text-encoding": "^0.7.0",
     "util": "^0.12.4"
   }
 }
