--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
-    "@cosmjs/amino": "0.28.4",
+   "@cosmjs/amino": "^0.29.0",
     "@cosmjs/crypto": "^0.29.2",
     "@cosmjs/proto-signing": "0.28.4",
     "@cosmjs/stargate": "^0.29.2",
