--- a/package.json
+++ b/package.json
@@ -56,22 +56,44 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "1.4.7",
     "@apollo/client": "^3.5.8",
-   "@cosmjs/amino": "^0.29.0",
+    "@cosmjs/amino": "^0.29.0",
     "@cosmjs/crypto": "^0.29.2",
+    "@cosmjs/launchpad": "0.27.1",
     "@cosmjs/proto-signing": "0.28.4",
     "@cosmjs/stargate": "^0.29.2",
+    "@cosmostation/extension-client": "^0.1.11-alpha.0",
+    "@ethereumjs/common": "^2.6.3",
+    "@ethereumjs/tx": "^3.5.1",
     "@improbable-eng/grpc-web": "^0.15.0",
     "@improbable-eng/grpc-web-node-http-transport": "^0.15.0",
+    "@keplr-wallet/cosmos": "^0.11.17",
+    "@keplr-wallet/types": "^0.11.17",
+    "@ledgerhq/hw-app-eth": "6.27.1",
+    "@ledgerhq/hw-transport": "6.27.1",
+    "@ledgerhq/hw-transport-u2f": "^5.36.0-deprecated",
+    "@ledgerhq/hw-transport-webhid": "6.27.1",
+    "@ledgerhq/hw-transport-webusb": "6.27.1",
     "@metamask/eth-sig-util": "^4.0.1",
     "@routerprotocol/chain-api": "^1.1.3",
+    "@solana/wallet-adapter-wallets": "^0.19.5",
+    "@terra-money/terra.js": "3.0.9",
+    "@terra-money/wallet-controller": "^3.9.4",
+    "@types/eth-sig-util": "^2.1.1",
+    "@types/ethereumjs-util": "^6.1.0",
+    "@types/hdkey": "^2.0.1",
+    "@types/ledgerhq__hw-transport-webusb": "^4.70.1",
     "@types/lodash.values": "^4.3.6",
+    "@walletconnect/web3-provider": "^1.7.8",
     "axios": "^0.21.1",
     "bech32": "^2.0.0",
     "bignumber.js": "^9.0.1",
     "bip39": "^3.0.4",
     "copyfiles": "^2.4.1",
     "crypto": "^1.0.1",
+    "eip1193-provider": "^1.0.1",
+    "eth-sig-util": "^3.0.1",
     "ethereumjs-abi": "^0.6.8",
     "ethereumjs-util": "^7.1.4",
     "ethers": "^5.6.4",
@@ -80,6 +102,7 @@
     "google-protobuf": "^3.20.1",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
+    "hdkey": "^2.0.1",
     "http-status-codes": "^2.2.0",
     "jscrypto": "1.0.3",
     "jsonschema": "^1.4.0",
@@ -88,12 +111,15 @@
     "lodash": "^4.17.21",
     "lodash.values": "^4.3.0",
     "pako": "^2.0.4",
+    "rxjs": "^7.5.5",
     "secp256k1": "^4.0.3",
     "sha3": "^2.1.4",
     "shx": "^0.3.2",
-   "snakecase-keys": "^5.4.1",
+    "snakecase-keys": "^5.4.1",
     "store2": "^2.12.0",
     "text-encoding": "^0.7.0",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "web3": "^1.8.1",
+    "web3-core": "^1.8.1"
   }
 }
