--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "snakecase-keys": "^5.4.1",
     "store2": "^2.12.0",
     "text-encoding": "^0.7.0",
+    "typedoc": "^0.23.23",
     "util": "^0.12.4",
     "web3": "^1.8.1",
     "web3-core": "^1.8.1"
