--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.8.67-beta-0.5",
+  "version": "0.8.68",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
