--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "version": "0.8.70",
   "license": "MIT",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "type": "commonjs",
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js",
+    "./types": "./dist/index.d.ts"
+  },
   "files": [
     "dist",
     "src"
