--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.8.70",
+  "version": "0.8.70-beta-0.2",
   "license": "MIT",
   "type": "commonjs",
   "main": "./dist/index.js",
